@@ -1,6 +1,7 @@
 2010-11-12  Stanislas Rolland  <typo3@sjbr.ca>
 
 	* Added feature #16365: htmlArea RTE: Delete compressed files when clearing RTE cache
+	* Fixed bug #16347: htmlArea RTE: PHP Warning: Invalid argument supplied for foreach() in ext_tables.php
 
 2010-11-11  Steffen Kamper  <steffen@typo3.org>
 
